- (FEAT) yum createrepo flags are now tweakable in settings
- (FEAT) new snippet for RHN Hosted: keep RHN keys between reinstalls
- (FEAT) allow per_distro snippets in addition to per_profile/per_system
- (BUGF) don't add port number to http_server if it's 80.
- (FEAT) replicate is now mtime aware
- (FEAT) support F11 fence-agent paths
- (FEAT) bringing back the koan live CD

- placeholder - 1.6.4
- (BUGF) empty nameserver search paths now don't screw up resolv.conf
- (BUGF) unicode fix for --template-files feature
- (BUGF) mod python input fix for repo/profile associations in webapp
- (BUGF) change "hostname" to "option hostname" in dhcp.template
- (BUGF) fixes for unicode problem with Cheetah, repos, and json
- (BUGF) unicode fix for --template-files feature
- (BUGF) another unicode fix
- (BUGF) bonding interface setup for RHEL4 now works
- (BUGF) generate DHCP info even if netboot is disabled
- (BUGF) Change to network_config snippet to ignore bond masters to prevent anaconda failures when MAC addresses are not specified

- XXX - 1.6.3
- (BUGF) import with datestamp 0 when .discinfo is not found, do not crash
- (BUGF) various fixes to "cobbler report" when using non-standard formats
- (BUGF) rename with same name does not delete
- (BUGF) Fix for traceback when generating DHCP config and the bonding_master interface does not exist.
- (BUGF) remove trailing newline from tokens
- (BUGF) fix unicode handling of some fields under EL4
- (BUGF) fix webui search error (fixed better on devel)
- (BUGF) fix duplicate power reference
- (BUGF) fix error message that makes it appear dnsmasq had a problem restarting, when it did not
- (BUGF) spec requires python-urlgrabber
- (BUGF) change settings default from 'ksdevice=eth0' to 'bootif'
- (BUGF) keep DHCP restart quiet
- (BUGF) better hostname setting with DHCP management on
- (BUGF) fix bug in repo breed auto-detection code
- (BUGF) close file descriptors by using subprocess, not os.system